# webmaster-helper

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-backend.yaml
nginx/: default.conf
src/api/: routers.py
src/api/abstract/: models.py  serializers.py
src/api/auth/: apps.py  permissions.py
src/api/mail_box/: serializers.py  viewsets.py
src/api/project/: admin.py  apps.py  models.py  serializers.py  viewsets.py
src/api/tasks/: link_check_task.py  mail_task.py  seo_parse_task.py  serializers.py  viewsets.py
src/api/url/: admin.py  apps.py  models.py  serializers.py
src/api/user/: admin.py  apps.py  models.py  serializers.py  viewsets.py
src/api/webmaster/: admin.py  apps.py  manager.py
src/core/: exceptions.py  settings.py  urls.py
src/link_checker/: admin.py  apps.py  checker.py  models.py
src/link_checker/migrations/: 0001_initial.py
src/mail/: admin.py  apps.py  client.py  models.py
src/mail/migrations/: 0001_initial.py  0002_mailsettings_check_date.py
src/seo_parser/: admin.py  apps.py  models.py  parser.py  serializers.py
src/seo_parser/core/: lib.py
src/seo_parser/libs/: __init__.py  moz.py  similarweb.py  webarchive.py  yandex_x.py
src/seo_parser/migrations/: 0001_initial.py
src/utils/: browser_client.py  logger_handler.py  mail_client.py  request_client.py  types.py  url_handlers.py
tests/: template.py
tests/api/auth/: test_auth_viewsets.py
tests/api/mail_box/: test_mail_box_viewsets.py
tests/api/project/: test_project_models.py  test_project_viewsets.py
tests/api/tasks/: test_link_check_task.py  test_mail_task.py  test_seo_parse_task.py
tests/api/url/: test_url_model.py  test_url_serializer.py
tests/api/user/: test_user_models.py  test_user_viewsets.py
tests/fixtures/: contact.py  mail_box.py  os_environ.py  payment.py  project.py  publish_page.py  seo_parser.py  url.py  user.py  webmaster.py  website.py
tests/link_checker/: test_link_checker.py
tests/mail/: test_client.py
tests/seo_parser/: test_parser.py
tests/utils/: test_browser_client.py  test_mail_client.py  test_request_client.py  test_url_handler.py
ui/: .eslintrc.cjs  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.test.tsx  App.tsx  main.tsx  style.css  types.ts
(+112 files in other folders)
